# visual_laplacian_eigenmap

./: README.md  config.json  pyproject.toml  soudan.md
src/: config.py  eigenmap.py  main.py  savepic.py
src/knot/: core.py  eight.py  hooph.py  hoph.py  random_trefoil.py  trefoil.py
src/legacy/: apply_eigenmap_to_trefoil.py  trefoil_sampler.py
